--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  amplitude_flutter: ^3.16.1
+  amplitude_flutter: ^3.16.2
   countup: ^0.1.4
   currency_text_input_formatter: ^2.1.8
   cupertino_icons: ^1.0.2
@@ -22,40 +22,37 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_svg: ^2.0.10+1
   get_it: ^7.6.7
-  go_router: ^10.1.2
+  go_router: ^13.2.1
   http: ^1.1.2
   http_interceptor: ^2.0.0-beta.8
   hydrated_bloc: ^9.1.1
   intl: ^0.18.0
-  lottie: ^2.1.0
-  mobile_scanner: ^2.1.0
-  package_info_plus: ^4.0.1
-  path_provider: ^2.0.15
-  provider: ^6.0.4
+  lottie: ^3.1.0
+  mobile_scanner: ^4.0.1
+  package_info_plus: ^5.0.1
+  path_provider: ^2.1.2
   shared_preferences: ^2.0.15
   vibration: ^1.7.6
-  visibility_detector: ^0.3.3
   nfc_manager: ^3.3.0
   loading_animation_widget: ^1.2.0+4
   bloc: ^8.1.3
-  flutter_guid: ^0.3.1
-  flutter_layout_grid: ^2.0.5
   material_color_utilities: ^0.8.0
   font_awesome_flutter: ^10.7.0
-  pinput: ^3.0.1
-  google_fonts: ^4.0.4
+  pinput: ^4.0.0
+  google_fonts: ^6.2.1
   device_info_plus: ^9.1.1
   ios_utsname_ext: ^2.2.0
   logging: ^1.2.0
   path: ^1.8.3
   responsive_sizer: ^3.3.0+1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
-  flutter_launcher_icons: "^0.11.0"
+  flutter_lints: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   generate: true
